sonar properties changes

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,20 +1,18 @@
-SONAR-QUBE-URL= http://10.0.0.120:9000 
-# sonar.login = sqa_e8f2d003a3892744bca62f4c999c81f498fe2acd
-sonar.login =admin
-sonar.password = kriyatec123
-# SONAR-QUBE-URL
-sonar.projectKey=app-test
-# Must be unique (Primary key)
-sonar.projectName=sample # name that will be displayed on the dashboard
+sonar.host.url=http://10.0.0.120:9000
+sonar.login=admin
+sonar.password=kriyatec123
+sonar.projectKey=sample
+sonar.projectName=Angular
 sonar.projectVersion=1.0
 sonar.sourceEncoding=UTF-8
 sonar.sources=src
 sonar.exclusions=**/node_modules/**
-# sonar.tests=/home/kriyatec/Documents/sample/src/app/tests # Where to pickup test files from
-# sonar.test.inclusions=**/*.spec.ts # only collect these for test-coverage
-sonar.javascript.lcov.reportPaths=src/coverage/sample/lcov.info
-# sonar.testExecutionReportPaths=reports/sonarqube_report.xml
-sonar.coverage.exclusions=**/*.js,src/main.ts,src/polyfills.ts,**/*environment*.ts,**/*module.ts,**/*.scss,**/*interface.ts, *.html
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
-# squ_c8e91810e55c2e69405f04008e98bf224de15095
-# sonar.password = kriyatec123
+sonar.tests=src
+sonar.test.inclusions=**/*.spec.ts
+sonar.typescript.lcov.reportPaths=coverage/lcov.info
+
+
+
+
+
+
